Increased width to prevent section wrapping on zoom out

--- a/main.css
+++ b/main.css
@@ -163,7 +163,7 @@ header a {
 
 article {
     height: 310px;
-    width: 666px;
+    width: 680px;
     margin: 10px auto 0 auto;
 }
 
